- remove makefile - change the way to set the version of the snap by git tag of the   latest commit.

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -33,7 +33,8 @@ parts:
     # override pull to read VERSION because working dir is root of source repo
     override-pull: |
       craftctl default
-      craftctl set version="$(cat VERSION)"
+      TAG=$(git describe --tags)
+      craftctl set version="${TAG#v}"
   scripts:
     plugin: dump
     source: snap/local
