--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,6 +1,8 @@
 name: charmed-openstack-exporter
 base: core22
 summary: OpenStack Exporter for Prometheus
+license: MIT
+contact: Solutions Engineering <solutions-engineering@lists.canonical.com>
 description: |
   The OpenStack exporter, exports Prometheus metrics from a running OpenStack
   cloud for consumption by prometheus.
