Update core and platforms

--- a/snap/snapcraft.yaml
+++ b/snap/snapcraft.yaml
@@ -1,5 +1,5 @@
 name: charmed-openstack-exporter
-base: core22
+base: core24
 summary: OpenStack Exporter for Prometheus
 license: MIT
 contact: solutions-engineering@lists.canonical.com
@@ -125,6 +125,10 @@ issues: https://github.com/canonical/charmed-openstack-exporter-snap/issues
 adopt-info: openstack-exporter
 confinement: strict
 grade: stable
+
+platforms:
+  amd64:
+  arm64:
 
 apps:
   openstack-exporter:
