Add deps for the tics action

--- a/tox.ini
+++ b/tox.ini
@@ -33,6 +33,8 @@ commands =
 
 [testenv:tics]
 deps =
+    pylint
+    flake8
     pytest
     pytest-cov
     -r {toxinidir}/tests/functional/requirements.txt
