drop coverage requirement, use flake8-pyproject

--- a/tox.ini
+++ b/tox.ini
@@ -9,14 +9,14 @@ setenv = PYTHONPATH={toxinidir}
 
 [testenv:lint]
 commands =
-    pflake8
+    flake8
     pylint --recursive=y .
     black --check --diff --color .
     isort --check --diff --color .
 deps =
     black
     flake8
-    pyproject-flake8
+    flake8-pyproject
     flake8-docstrings
     pep8-naming
     flake8-colors
