- fix tox to the tics automation

--- a/tox.ini
+++ b/tox.ini
@@ -40,9 +40,6 @@ deps =
 commands =
     black .
     isort .
-deps =
-    black
-    isort
 
 [testenv:unit]
 setenv =
@@ -53,6 +50,9 @@ allowlist_externals =
 commands = echo "No unit tests, skipping."
 
 [testenv:func]
+setenv =
+    {[testenv]setenv}
+    COVERAGE_FILE = .coverage-func
 setenv =
     {[testenv]setenv}
     COVERAGE_FILE = .coverage-func
