[DNM][POC] Fix when there is no coverage report

--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -10,7 +10,7 @@ on:
   workflow_dispatch:
   pull_request:
     types: [opened, synchronize, reopened]
-    branches: [main]
+    branches: [main, fix-tics]
     paths-ignore:
       - "**.md"
       - "**.rst"
@@ -157,9 +157,6 @@ jobs:
 
   tics-analysis:
     runs-on: ubuntu-22.04
-    if: >
-      (github.event_name == 'push' && github.ref == 'refs/heads/main') ||
-      (github.event_name == 'workflow_dispatch' && github.ref == 'refs/heads/main')
     needs: func
     steps:
       - uses: actions/checkout@v4
@@ -183,19 +180,16 @@ jobs:
 
       - name: Merge coverage reports
         run: |
-          # Create the path that is expected to have a coverage.xml for tics
-          mkdir -p tests/report/
-
           coverage_files=(./artifacts/.coverage*)
 
           if [ -e "${coverage_files[0]}" ]; then
             echo "Merging coverage files: ${coverage_files[*]}"
             coverage combine "${coverage_files[@]}"
-            coverage xml -o tests/report/coverage.xml
-          else
-            echo "No coverage files found, skipping merge"
-            # Create an empty file to avoid downstream failure
-            touch tests/report/coverage.xml
+
+            # Check if there is actual data to report before generating XML with merged reports
+            if coverage report > /dev/null 2>&1; then
+              coverage xml -o tests/report/coverage.xml
+
           fi
 
       - name: Run TICS analysis
