--- a/.github/workflows/check.yaml
+++ b/.github/workflows/check.yaml
@@ -180,6 +180,9 @@ jobs:
 
       - name: Merge coverage reports
         run: |
+          # Create the path that is expected to have a coverage.xml for tics
+          mkdir -p tests/report/
+
           coverage_files=(./artifacts/.coverage*)
 
           if [ -e "${coverage_files[0]}" ]; then
